agegando dependencias a Linux CentOs SO

--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -8,4 +8,5 @@ phases:
       - npm install
   build:
     commands:
+      - yum install -y xorg-x11-server-Xvfb gtk2-devel gtk3-devel libnotify-devel GConf2 nss libXScrnSaver alsa-lib
       - npm run cy:parallel
