Arreglando dependencias a Linius CentOS SO

--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -7,5 +7,6 @@ phases:
     commands:
       - npm install
   build:
-    comands:
-      -npm run cy:parallel
+    comnands:
+      - yum install -y xorg-x11-server-Xvfb gtk2-devel gtk3-devel libnotify-devel GConf2 nss libXScrnSaver alsa-lib
+      - npm run cy:parallel
