--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "ejecutar-pruebas": "cypress run --env allure=true",
     "generar-reporte": "allure generate allure-results -o allure-report --clean",
     "abrir-reporte": "allure open",
-    "test": "npm run limpiar-reporte && npm run ejecutar-pruebas & npm run generar-reporte && npm run abrir-reporte",
-    "cy:parallel" : "npm run limpiar-reporte && cypress-parallel -s ejecutar-pruebas -t 2 -d ./cypress/e2e/test & npm run generar-reporte"
+    "test": "npm run limpiar-reporte && npm run ejecutar-pruebas; npm run generar-reporte && npm run abrir-reporte",
+    "cy:parallel" : "npm run limpiar-reporte && cypress-parallel -s ejecutar-pruebas -t 2 -d ./cypress/e2e/test; npm run generar-reporte"
   },
   "keywords": [],
-  "author": "Zueli",
+  "author": "",
   "license": "ISC",
   "devDependencies": {
     "@shelex/cypress-allure-plugin": "^2.40.1"
